	- no longer trust in query section in reply during dnssec lame detect.
	- dnssec lameness does not make the server never ever queried, but
	  non-preferred. If no other servers exist or answer, the dnssec lame
	  server is used; the fastest dnssec lame server is chosen.
	- added test then when trust anchor cannot be primed (nodata), the
	  insecure mode from unbound works.

22 October 2007: Wouter
	- added donotquerylocalhost config option. Can be turned off for
	  out test cases.
	- ISO C compat changes.
	- detect RA-no-AA lameness, as LAME.
	- DNSSEC-lameness detection, as LAME.
	  See notes in requirements.txt for choices made.
	- tests for lameness detection.
	- added all to make test target; need unbound for fwd tests.
	- testbound does not pollute /etc/unbound.

19 October 2007: Wouter
	- added configure (and its files) to svn, so that the trunk is easier
	  to use. ./configure, config.guess, config.sub, ltmain.sh,
	  and config.h.in.
	- added yacc/lex generated files, util/configlexer.c, 
	  util/configparser.c util/configparser.h, to svn. 
	- without lex no attempt to use it.
	- unsecure response validation collated into one block.
	- remove warning about const cast of cfgfile name.
	- outgoing-interfaces can be different from service interfaces.
	- ldns-src configure is done during unbound configure and
	  ldns-src make is done during unbound make, and so inherits the
	  make arguments from the unbound make invocation.
	- nicer error when libevent problem causes instant exit on signal.
	- read root hints from a root hint file (like BIND does).
	  
18 October 2007: Wouter
	- addresses are logged with errors.
	- fixup testcode fake event to remove pending before callback
	  since the callback may create new pending items.
	- tests updated because retries are now in iterator module.
	- ldns-testpkts code is checked for differences between unbound
	  and ldns by makedist.sh.
	- ldns trunk from today added in svn repo for fallback in case